# tinkoff-homeworks

./: README.md
HW1/: fizzbuzz.py
hw-1-2/: Makefile  golf.py
hw-1-2/tests/: test_golf.py  test_golf_additional.py
hw-1-3/: Makefile  log_parse.py
hw-1-3/tests/: eight_test.json  eleven_test.json  fourteen_test.json  nine_test.json  ten_test.json  test_is_date_valid.py  test_parse_date.py  test_parse_request.py  thirteen_test.json  twelve_test.json
hw_1_10/: main.py  pyproject.toml
hw_1_10/handlers/: handler.py
hw_1_10/service/: service.py
hw_1_11/: README.md  main.py
hw_1_11/strategy/: __init__.py  context.py  strategy.py
hw_1_11/tests/: test_habr.py  test_yandexmusic.py  test_youtube.py
hw_1_12/: Makefile  main.py  runner.py
hw_1_12/configs/: config.yaml  configA.yaml  configB.yaml  configC.yaml
hw_1_12/handlers/: handler.py
hw_1_12/node/: __init__.py  node.py
hw_1_12/repository/: __init__.py  repository.py
hw_1_12/service/: __init__.py  service.py
hw_1_12/tests/: test_service.py
hw_1_13/blogsplatform/: manage.py
hw_1_4/: server.py
hw_1_4/tests/: test_block.py  test_blockchain.py
hw_1_5/: Makefile  README.md  requirements.txt  test.py  tv_program.py
hw_1_5/service/: __init__.py  model.py  search.py
hw_1_5/tests/: test_search.py
hw_1_6/: Makefile  server.py
hw_1_6/tests/: test_server.py
hw_1_7/: Makefile  README.md  main.py  requirements.txt
hw_1_7/filedict/: __init__.py  filedict.py
hw_1_7/handlers/: handler.py
hw_1_7/service/: __init__.py  service.py
hw_1_7/tgbot/: __init__.py  (+1 more)
hw_1_9/: Makefile  text_history.py
(+34 files in other folders)
