[tool.poetry]
name = "hw-1-10"
version = "0.1.0"
description = ""
authors = ["Aleksander Radovsky <alrad.sys@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_1_10"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
mytgbotlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
